# CS_6956_HW4

./: .gitignore  .pre-commit-config.yaml  README.md  cifar10.ipynb  pyproject.toml  requirements.txt  test.ipynb
src/: __init__ .py  __init__.py  cifar10-grayscale.py  cifar10-rgb.py  config.py  datasets.py  fashion_mnist.py  models.py  train.py  training.py  utils.py
